--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "animate.css": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
     "react-scripts": "5.0.1",
     "react-type-animation": "^2.1.0",
     "uniqid": "^5.4.0",
